fix: remove side scrollbar, adjust hero section and reset global margins and paddings to avoid overflows and fix errors on other docs

--- a/src/app/pages/home/hero-section/hero-section.component.scss
+++ b/src/app/pages/home/hero-section/hero-section.component.scss
@@ -1,8 +1,11 @@
-.hero-section {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  // padding: 2px;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  overflow: hidden;
 }
 
 h1 {
@@ -23,10 +26,12 @@ h1 {
   max-width: 400px;
 }
 .container {
-  position: relative;
+  position: absolute;
   text-align: center;
-  padding: 7%;
-  //   padding: 49px;
+  padding: 8%;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .container::before {
@@ -55,10 +60,6 @@ h1 {
   font-size: 60px;
   color: #ffffff;
   font-weight: 500;
-}
-
-.container {
-  overflow: hidden;
 }
 
 h1 {
