--- a/src/styles.scss
+++ b/src/styles.scss
@@ -121,6 +121,3 @@ body {
   margin-bottom: 10px;
 }
 
-.force-page-break {
-  page-break-before: always;
-}
